--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "sideEffects": false,
   "scripts": {
     "build": "remix build",
-    "deploy": "wrangler publish",
+    "deploy": "npm run build && npm run build:worker-asset-manifest && npm run build && wrangler kv:bulk put --binding __STATIC_CONTENT -e production assets.json && wrangler publish -e production",
     "dev:remix": "remix watch",
-    "dev:miniflare": "cross-env NODE_ENV=development miniflare ./build/index.js --watch",
+    "dev:miniflare": "cross-env NODE_ENV=development miniflare ./build/index.js --watch --site ./public",
     "dev": "remix build && run-p \"dev:*\"",
-    "start": "cross-env NODE_ENV=production miniflare ./build/index.js"
+    "start": "cross-env NODE_ENV=production miniflare ./build/index.js",
+    "build:worker-asset-manifest": "node scripts/generate-asset-files.mjs"
   },
   "dependencies": {
     "@remix-run/cloudflare": "^1.6.8",
@@ -15,7 +16,8 @@
     "@remix-run/react": "^1.6.8",
     "cross-env": "^7.0.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "recursive-readdir": "^2.2.2"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.14.1",
