--- a/asset-mapping.json
+++ b/asset-mapping.json
@@ -1,10 +1,1 @@
-{
-  "favicon.ico": "favicon-NA8XKj/HNAag5zYn9EmfZU2wFsA=.ico",
-  "build/entry.client-L6ZTODTV.js": "build/entry.client-L6ZTODTV.js",
-  "build/manifest-D67CF4F7.js": "build/manifest-D67CF4F7.js",
-  "build/root-EIO7WTKN.js": "build/root-EIO7WTKN.js",
-  "build/_assets/remix-logo-KNVCJB2W.png": "build/_assets/remix-logo-KNVCJB2W.png",
-  "build/_shared/chunk-LHUECDNL.js": "build/_shared/chunk-LHUECDNL.js",
-  "build/_shared/chunk-N2JFIHYN.js": "build/_shared/chunk-N2JFIHYN.js",
-  "build/routes/index-O35BJHPX.js": "build/routes/index-O35BJHPX.js"
-}
+{"favicon.ico":"favicon-NA8XKj/HNAag5zYn9EmfZU2wFsA=.ico","build/entry.client-L6ZTODTV.js":"build/entry.client-L6ZTODTV.js","build/manifest-D67CF4F7.js":"build/manifest-D67CF4F7.js","build/root-EIO7WTKN.js":"build/root-EIO7WTKN.js","build/_assets/remix-logo-KNVCJB2W.png":"build/_assets/remix-logo-KNVCJB2W.png","build/_shared/chunk-LHUECDNL.js":"build/_shared/chunk-LHUECDNL.js","build/_shared/chunk-N2JFIHYN.js":"build/_shared/chunk-N2JFIHYN.js","build/routes/index-O35BJHPX.js":"build/routes/index-O35BJHPX.js"}
